fixed wrong proto definition
